Crash when sculpting brush has "Occlusion" enabled under "Advanced > Auto-Masking > View Normal" #121061

Closed
opened 2024-04-25 04:48:38 +02:00 by Vas · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.52

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-20 20:34, hash: 8392f69e106c
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 10:33, hash: fc21513709aa

Short description of error
Caused by enabling "Brush Settings > Advanced > Auto-masking > View Normal > Occlusion" togglebox
Bigger brush / more geometry seems to crash even faster as soon as you click somewhere to sculpt

No bug version: 4.0.0 Alpha, branch: main, commit date: 2023-09-26 23:45, hash: 86a0d0015ac7
No bug version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 10:33, hash: fc21513709aa
Crashes version: 4.1.0 Alpha, branch: main, commit date: 2024-02-01 13:53, hash: fd7fcb2cdc1e

i tested several versions blender i had on my PC and 2023-10-16 was the last one that worked (i didn't download new versions for couple of months after that so the time window gotta be narrowed down more to find exact build where it was introduced)

Demo of reproducing crash in 4.2.0 alpha

Exact steps for others to reproduce the error

  • Default file
  • Select cube, change to sculpt mode
  • Press N and change to tool tab
  • Toggle View normal and Occlusion under Brush settings > Advanced > Auto-masking
  • try to sculpt on the cube, increase brush size a bit to crash faster
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.52 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-20 20:34, hash: `8392f69e106c` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 10:33, hash: `fc21513709aa` **Short description of error** Caused by enabling "Brush Settings > Advanced > Auto-masking > View Normal > **Occlusion**" togglebox Bigger brush / more geometry seems to crash even faster as soon as you click somewhere to sculpt No bug ✅ version: 4.0.0 Alpha, branch: main, commit date: 2023-09-26 23:45, hash: `86a0d0015ac7` No bug ✅ version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 10:33, hash: `fc21513709aa` Crashes ❌ version: 4.1.0 Alpha, branch: main, commit date: 2024-02-01 13:53, hash: `fd7fcb2cdc1e` i tested several versions blender i had on my PC and 2023-10-16 was the last one that worked (i didn't download new versions for couple of months after that so the time window gotta be narrowed down more to find exact build where it was introduced) Demo of reproducing crash in 4.2.0 alpha <video src="/attachments/dc2e1968-89e1-4cfa-ab3d-5b2aa01d3fd1" title="2024-04-25 03-21-42.mp4" controls></video> **Exact steps for others to reproduce the error** - Default file - Select cube, change to sculpt mode - Press N and change to tool tab - Toggle View normal and Occlusion under Brush settings > Advanced > Auto-masking - try to sculpt on the cube, increase brush size a bit to crash faster
Vas added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-04-25 04:48:38 +02:00
Member

Hi, thanks for the report. Can confirm the crash in pbvh_faces_node_raycast

Hi, thanks for the report. Can confirm the crash in `pbvh_faces_node_raycast`
Member

I'll take a look. AFAICS, srd.corner_verts is not initialized in SCULPT_vertex_is_occluded

I'll take a look. AFAICS, `srd.corner_verts` is not initialized in `SCULPT_vertex_is_occluded`
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-25 17:11:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121061
No description provided.