Fix #121061: Crash when sculpting brush has Occlusion enabled

corner_verts span is empty when occlusion is enabled. So assign value to
it in `SCULPT_vertex_is_occluded`

Pull Request: https://projects.blender.org/blender/blender/pulls/121071